--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "install": "^0.13.0",
+    "npm": "^10.8.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
